lab_yaml/role.yaml
# 1. Create a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: dev
